Match-id-67fcfc87166045a288adb11709b9b1c034822685

--- a/api/internal/api-qos-internal.yaml
+++ b/api/internal/api-qos-internal.yaml
@@ -64,8 +64,8 @@ paths:
       x-dr-role: 'N'
       x-product: OceanProtect X
       x-dm-role: 'N'
-      x-impact-subsystem: 影响
-      x-access-port: 30081
+      x-impact-subsystem: 不影响
+      x-access-port: 30092
       x-auth-required: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
@@ -96,8 +96,8 @@ paths:
       x-dr-role: 'N'
       x-product: OceanProtect X
       x-dm-role: 'N'
-      x-impact-subsystem: 影响
-      x-access-port: 30081
+      x-impact-subsystem: 不影响
+      x-access-port: 30092
       x-auth-required: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
@@ -137,7 +137,7 @@ paths:
       x-product: OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
-      x-access-port: 30081
+      x-access-port: 30092
       x-auth-required: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
