--- a/api/internal/api-host-res-internal.yaml
+++ b/api/internal/api-host-res-internal.yaml
@@ -8,10 +8,10 @@ paths:
   /v1/internal/resource/host/{host_id}:
     get:
       x-dr-role: 'N'
-      x-product: OceanProtect X
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
-      x-access-port: 30081
+      x-access-port: 30092
       x-auth-required: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
