--- a/api/external/api-host-res.yaml
+++ b/api/external/api-host-res.yaml
@@ -243,7 +243,8 @@ paths:
       summary: 根据主机ID查询主机信息
   /v1/resource/host/{host_id}/action/modify:
     put:
-      x-product: OceanProtect X
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -296,7 +297,8 @@ paths:
       summary: 修改主机名名称
   /v1/resource/host/{host_id}/action/sync-snmp-conf:
     post:
-      x-product: OceanProtect X
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -392,17 +394,18 @@ paths:
       summary: 查询主机可升级的版本
   /v1/resource/host/action/migrate:
     post:
-      x-product: OceanProtect X
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       tags:
         - host
       summary: 迁移主机
       x-impact-subsystem: 不影响
-      x-access-port: 30092
+      x-access-port: 25081
       x-auth-required: 'Y'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
-      x-dp-admin-role: 'N'
+      x-dp-admin-role: 'Y'
       x-public-api: 'Y'
       x-sysadmin-role: 'Y'
       description: 迁移主机到目标集群
