--- a/api/internal/api-backup-client-res-internal.yaml
+++ b/api/internal/api-backup-client-res-internal.yaml
@@ -6,36 +6,27 @@ tags:
   - name: agent_api
 paths:
   /v1/internal/agent/upgrade:
-    get:
-      x-product: OceanProtect X
+    post:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 30092
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       produces:
         - application/json
       parameters:
-        - description: 主机ip
-          in: query
-          name: ip
-          required: true
-          type: string
-        - description: 主机端口
-          in: query
-          name: port
-          required: true
-          type: string
-        - description: 下载链接
-          in: query
-          name: downloadLink
-          required: true
-          type: string
-        - description: AgentID
-          in: query
-          name: agentId
-          required: true
-          type: string
-        - description: Agent名称
-          in: query
-          name: agentName
-          required: true
-          type: string
+        - name: agentUpdateRequest
+          in: body
+          required: false
+          description: update agent
+          schema:
+            $ref: '#/definitions/AgentUpdateRequest'
       responses:
         '200':
           description: Successful Response
@@ -57,7 +48,17 @@ paths:
       summary: 透传Agent执行客户端升级接口
   /v1/internal/agent/upgrade-status:
     get:
-      x-product: OceanProtect X
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 30092
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       produces:
         - application/json
       parameters:
@@ -121,4 +122,31 @@ definitions:
       - type
     title: ValidationError
     type: object
+  AgentUpdateRequest:
+    type: object
+    properties:
+      ip:
+        type: string
+        description: host ip
+      port:
+        type: string
+        description: host port
+      downloadLink:
+        type: string
+        description: 下载链接
+      agentId:
+        type: string
+        description: agent id
+      agentName:
+        type: string
+        description: agent name
+      canUseProxy:
+        type: string
+        description: 是否需要代理
+      certSecretKey:
+        type: string
+        description: 密钥,已加密
+      jobId:
+        type: string
+        description: 任务id
 x-components: {}
